blog/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: posts.com
    http:
      paths:
      - pathType: Prefix
        path: "/posts/create"
        backend:
          service:
            name: posts-srv
            port: 
              number: 4000
      - pathType: Prefix
        path: "/posts"
        backend:
          service:
            name: query-srv
            port: 
              number: 4002
      - pathType: Prefix
        path: "/posts/?(.*)/comments"
        backend:
          service:
            name: comments-srv
            port: 
              number: 4001
      - pathType: Prefix
        path: "/?(.*)"
        backend:
          service:
            name: client-srv
            port: 
              number: 3000
